# taxi_prediction_fullstack_alessandro

./: .gitignore  README.md  pyproject.toml
src/taxipred/backend/: api.py  data_processing.py
src/taxipred/frontend/: app.py
src/taxipred/model_development/: eda.ipynb  model_dev.ipynb
src/taxipred/utils/: constants.py
