[project]
name = "taxipred"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aleex87", email = "alessandrodanteabbate@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
taxipred = "taxipred:main"

[build-system]
requires = ["uv_build>=0.9.12,<0.10.0"]
build-backend = "uv_build"
