[project]
name = "taxipred"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aleex87", email = "alessandrodanteabbate@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "folium>=0.20.0",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "joblib>=1.5.3",
    "notebook>=7.5.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.53.0",
    "streamlit-folium>=0.26.1",
    "uvicorn>=0.40.0",
]

[project.scripts]
taxipred = "taxipred:main"

[build-system]
requires = ["uv_build>=0.9.12,<0.10.0"]
build-backend = "uv_build"
